--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,17 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project(':library')
+    compile 'com.github.santiFuse:calendarview:1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.github.santiFuse:calendarview:1.0'
 }
