--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.henry.calendarviewsample"
+        applicationId "com.santiFuse.calendarviewsample"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -19,6 +19,7 @@ android {
     }
 }
 
+
 allprojects {
     repositories {
         jcenter()
@@ -26,10 +27,10 @@ allprojects {
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.github.santiFuse:calendarview:1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.github.santiFuse:calendarview:1.0'
 }
