--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.santiFuse.calendarviewsample"
@@ -23,6 +23,7 @@ android {
 allprojects {
     repositories {
         jcenter()
+        google()
         maven { url "https://jitpack.io" }
     }
 }
@@ -31,6 +32,6 @@ allprojects {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.github.santiFuse:calendarview:1.0'
+    compile 'com.github.santifuse:calendarview:1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
 }
