--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,11 @@
 
 buildscript {
     repositories {
-        google()
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -17,9 +20,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        google()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
